--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postgres": "^3.4.8",
     "telegraf": "^4.16.0",
     "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
