--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dayjs": "^1.11.19",
     "dotenv": "^16.0.0",
     "node-cron": "^4.2.1",
+    "pg": "^8.18.0",
     "postgres": "^3.4.8",
     "telegraf": "^4.16.0",
     "winston": "^3.19.0",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.16.0",
     "tsx": "^4.21.0",
     "typescript": "^5.0.0"
   }
